# SDL-Game-Development-Chapter-8-Alien-Attack

src/: AnimatedGraphic.cpp  AnimatedGraphic.h  Bullet.h  BulletHandler.cpp  BulletHandler.h  CMakeLists.txt  Callback.h  Collision.h  CollisionManager.cpp  CollisionManager.h  Enemy.h  Eskeletor.cpp  Eskeletor.h  Game.cpp  Game.h  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  Glider.h  InputHandler.cpp  InputHandler.h  Layer.h  Level.cpp  Level.h  Level1Boss.cpp  Level1Boss.h  LevelParser.cpp  LevelParser.h  LoaderParams.h  MainMenuState.cpp  MainMenuState.h  MapLoader.cpp  MapLoader.h  MenuButton.cpp  MenuButton.h  (+28 more)
